src/Home.css
.body-central-default {
    text-align: center;
    margin-top: 5%;
}

.blue-bubble {
    background-color: rgb(228, 233, 242);
    padding: 1.5em;
    border-radius: 1em;
    margin: .5em;
}

.middle-column {
    display: flex;
    flex-direction: column;
    justify-content: center;
}

@media only screen and (min-width: 1080px) {
    .container-body-width {
      width: 60%;
      max-width: 1200px;
      margin: 0 auto;
    }

    .middle-flex-row {
        display: flex;
        flex-direction: row;
        width: 100%;
    }
}

@media only screen and (min-width: 720px) and (max-width: 1079px) {
    .container-body-width {
      width: 85%;
      margin: 0 auto;
    }

    .middle-flex-row {
        display: flex;
        flex-direction: row;
        flex-wrap: wrap;
    }
}

@media only screen and (max-width: 719px) {
    .container-body-width {
      width: 100%;
      padding: 0 0.5em;
    }

    .middle-flex-row {
        display: flex;
        flex-direction: column;
    }

    .blue-bubble {
        padding: 1em;
        margin: 0.4em;
    }
}

.who-am-i {
    flex-grow: 17;
}

.half-container {
    flex-grow: 100;
    width: 40%;
    max-width: 40%;
    position: relative;
}

.yt-container {
    flex-grow: 0.1;
    width: 60%;
    max-width: 60%;
}

@media only screen and (max-width: 719px) {
    .half-container {
        width: 100%;
        max-width: 100%;
    }

    .yt-container {
        width: 100%;
        max-width: 100%;
    }
}

@media only screen and (min-width: 720px) {
    .self-pictures {
        flex-grow: 3;
        display: flex;
        flex-direction: column;
        justify-content: center;
        align-items: center;
    }
}

@media only screen and (max-width: 719px) {
    .self-pictures {
        display: flex;
        flex-direction: row;
        justify-content: center;
        flex-wrap: wrap;
        width: 100%;
    }

    .self-picture-item {
        margin: 0.3em;
    }

    .self-picture-item img {
        width: 8em;
        height: 8em;
    }
}

.self-picture-item {
    margin: .5em auto;
}

.self-picture-item img {
    display: inline-block;
    width: 10em;
    height: 10em;
    object-fit: cover;
    border-radius: 0.5em;
}

.self-picture-item p {
    text-align: center;
    padding-top: .2em;
    font-family: "dovetail-mvb", serif;
    font-size: 18px;
    color: rgb(112, 112, 112)
}

.blue-league-title {
    font-family: "League Spartan", sans-serif;
    margin-bottom: .2em;
    font-size: clamp(1.5rem, 4vw, 36px);
    font-weight: 400;
    color: #1D4296;
}

.gray-league-paragraph {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(1rem, 2.5vw, 24px);
    font-weight: 200;
    line-height: 1.4;
}

@media only screen and (max-width: 719px) {
    .gray-league-paragraph {
        font-size: 1.1rem;
        line-height: 1.5;
    }
}

.text-centered {
    text-align: center;
}

.league-p-bold {
    font-weight: 600;
}

.league-p-clickable {
    font-weight: 600;
    color: #1D4296;
    text-decoration: none;
}

.projects-container {
    padding: .1em;
}

.project-tabs {
    text-align: left;
    display: block;
}

.project-tab-title {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(1.2rem, 3vw, 30px);
    display: inline;
    margin-right: .5em;
}

.project-tab-title:hover {
    cursor: pointer;
}

.active-tab-title {
    color: #1D4296;
}

.inactive-tab-title {
    color: #7688B1;
}

.mobile-project-tab-title {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(1.1rem, 4vw, 28px);
    padding: .3em;
    margin: .1em 0;
    border-radius: 10px;
}

.mobile-project-tab-title:hover {
    cursor: pointer;
}

.mobile-active-tab-selection {
    color: #fff;
    background-color: #325199;
}

.mobile-inactive-tab-selection {
    color: rgb(92, 92, 92);
    background-color: rgb(199, 203, 210);
}

.mobile-inactive-tab-selection:hover {
    color: rgb(58, 58, 58);
    background-color: rgb(153, 156, 162);
}

.project-list {
    overflow: hidden;
}

.project-section {
    margin: 1em 0em;
    text-align: left;
}

.project-title {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(1.1rem, 2.5vw, 24px);
    text-decoration: none;
}

.project-title-link:link {
    text-decoration: none;
    color: #191919;
}

.project-title-link:visited {
    text-decoration: none;
    color: #191919;
}

.project-title-link:hover {
    text-decoration: none;
    cursor: pointer;
    color: #7688B1;
}

.project-title-link:active {
    text-decoration: none;
    color: #191919;
}

.project-desc {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(0.9rem, 2vw, 18px);
    font-weight: 300;
    margin: 8px 0px;
    line-height: 1.4;
}

.project-subtext {
    font-family: "League Spartan", sans-serif;
    font-size: clamp(0.8rem, 1.8vw, 16px);
    font-weight: 100;
    line-height: 1.3;
}

.project-divide {
    color: #7688B1;
    width: 90%;
    opacity: 0.2;
}

.misc-links-title {
    font-weight: 400;
    font-family: "League Spartan", sans-serif;
}

.misc-links-title:link {
    text-decoration: none;
    color: #1D4296;
}

.misc-links-title:visited {
    text-decoration: none;
    color: #1D4296;
}

.misc-links-title:hover {
    text-decoration: none;
    cursor: pointer;
    color: #7688B1;
}

.misc-links-title:active {
    text-decoration: none;
    color: #1D4296;
}

.misc-links-list-item {
    font-weight: 200;
    font-family: "League Spartan", sans-serif;
    font-size: clamp(0.9rem, 2vw, 18px);
    margin: .4em 0em;
}

.wooper-decoration {
    display: block;
    width: 5em;
    margin: 1em auto 0;
    opacity: 0.8;
}

@media only screen and (max-width: 719px) {
    .wooper-decoration {
        width: 3.5em;
    }
}

.checkout-image {
    display: block;
    width: 100%;
    max-width: 300px;
    margin: 1em auto 0;
    border-radius: 0.5em;
}

